--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,20 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "myPlanwise",
+  "name": "Helping Canadians make informative decisions about their finances with a simple, easy to use, and free tool.",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo.jpeg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/jpeg"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "logo.jpeg",
+      "type": "image/jpeg",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "logo.jpeg",
+      "type": "image/jpeg",
       "sizes": "512x512"
     }
   ],
