--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "myPlanwise",
-  "name": "Helping Canadians make informative decisions about their finances with a simple, easy to use, and free tool.",
+  "short_name": "Planwise",
+  "name": "Helping Canadians make informative decisions about their finances.",
   "icons": [
     {
       "src": "logo.jpeg",
